compiled/tutorial/manifests/echo-server-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: echo-server
  name: echo-server
