compiled/tutorial/manifests/global-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels:
    name: global
  name: global
  namespace:
spec:
  rules:
    - host:
      http:
        paths:
          - backend:
              service:
                name: echo-server
                port:
                  number: 80
            path: /echo/*
            pathType: Prefix
